[package]
name = "bevy_flycam"
version = "0.16.0"
authors = ["Spencer Burris <sburris@posteo.net>"]
edition = "2021"
license = "ISC"
description = "Basic first-person fly camera for the Bevy game engine"
homepage = "https://github.com/sburris0/bevy_flycam/"
repository = "https://github.com/sburris0/bevy_flycam/"
readme = "README.md"
keywords = ["gamedev", "bevy", "3d", "camera"]
categories = ["game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [ "bevy_window", "bevy_core_pipeline"] }

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_window", "bevy_core_pipeline", "bevy_log", "bevy_pbr", "bevy_render", "bevy_winit", "tonemapping_luts", "bevy_state"] }